[package]
name = "Advent_of_code"
version = "0.1.0"
authors = ["Scarjit <scarjit@aol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.2.1"

[profile.test]
codegen-units = 24
lto = true
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3